# InvoiceKrab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/einvoice-dsl/: Cargo.toml
crates/einvoice-dsl/src/: README.md  compile.rs  error.rs  hub.rs  ir.rs  lib.rs  loader.rs  meta.rs  multiple.rs  node.rs  normalize.rs  parse.rs  report.rs  resolve.rs  types.rs  validate.rs
crates/einvoice-dsl/src/codegen/: README.md  access.rs  diag.rs  hub.rs  mod.rs  naming.rs  plan.rs  read.rs  source.rs  write.rs
crates/einvoice-dsl/src/source_model/: meta.rs  mod.rs  resolve.rs  synth.rs
crates/einvoice-interfaces/: Cargo.toml  build.rs
crates/einvoice-interfaces/benches/: transformation.rs
crates/einvoice-interfaces/src/: README.md  analysis.rs  keys.rs  lib.rs  table.rs
crates/einvoice-interfaces/src/cli/: command.rs  detect.rs  error.rs  mod.rs  parse.rs  render.rs  run.rs
crates/einvoice-interfaces/src/server/: README.md  config.rs  gate.rs  handle.rs  mod.rs  router.rs
crates/einvoice-interfaces/tests/: cli.rs  xrechnung_fixture.rs
crates/einvoice-transformator/: Cargo.toml
crates/einvoice-transformator/src/: README.md  adapter.rs  lib.rs  normalize.rs  result.rs  validate.rs
mappings/: README.md  cii.toml  facturx.toml  fatturapa.toml  peppol.toml  ubl.toml  xrechnung.toml
testfiles/: UBL-Invoice-2.1.xml  xrechnung-3.0.2-beispiel.xml
