[workspace]
resolver = "3"
members = [
    "crates/einvoice-transformator",
    "crates/einvoice-dsl",
    "crates/einvoice-interfaces",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `preserve_order` keeps TOML document order so a mapping's declaration order is
# preserved through parsing.
toml = { version = "0.9", features = ["preserve_order"] }
thiserror = "2"
# Scale-preserving decimal for canonical decimal values.
rust_decimal = "1"
# Source-XML (de)serialization for the typed source models.
quick-xml = "0.37"
# Sync HTTP server for the krab-server binary. Plain dependency (no feature
# gate) so the crate's feature fingerprint never flips between CLI and server
# builds — a flip would re-run the codegen build script every time.
tiny_http = "0.12"
# TCP_NODELAY on the server listener: tiny_http never sets it, and Nagle +
# delayed ACK adds ~40 ms to every keep-alive request without it.
socket2 = "0.5"

# Internal crates.
einvoice-transformator = { path = "crates/einvoice-transformator" }
einvoice-dsl = { path = "crates/einvoice-dsl" }

# dev-dependencies
rstest = "0.23"
pretty_assertions = "1"
insta = "1"
criterion = "0.5"
