[workspace]
resolver = "3"
members = [
    "crates/einvoice-transformator",
    "crates/einvoice-dsl",
    "crates/einvoice-interfaces",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `preserve_order` keeps TOML document order so a mapping's declaration order is
# preserved through parsing.
toml = { version = "1.1", features = ["preserve_order"] }
thiserror = "2"
# Scale-preserving decimal for canonical decimal values.
rust_decimal = "1"
# Source-XML (de)serialization for the typed source models.
quick-xml = "0.41"

# Internal crates.
einvoice-transformator = { path = "crates/einvoice-transformator" }
einvoice-dsl = { path = "crates/einvoice-dsl" }

# dev-dependencies
rstest = "0.26"
pretty_assertions = "1"
insta = "1"
criterion = "0.8"
