[workspace]
resolver = "3"
members = [
    "crates/einvoice-transformator",
    "crates/einvoice-dsl",
    "crates/einvoice-interfaces",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release]
# fat LTO + 1 codegen unit = best runtime speed (~10% over thin LTO on the
# transform benches), slower compile. For local optimized iteration use
# `--profile perf` (thin LTO: ~4x faster incremental rebuild, ~10% slower).
lto = true
codegen-units = 1

[profile.perf]
inherits = "release"
lto = "thin"
codegen-units = 16

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `preserve_order` keeps TOML document order so a mapping's declaration order is
# preserved through parsing.
toml = { version = "1.1", features = ["preserve_order"] }
thiserror = "2"
# Scale-preserving decimal for canonical decimal values.
rust_decimal = "1"
# Inline small strings (≤24 bytes stay on the stack) for the generated source
# models and hub: invoice fields are dominated by tiny values ("EUR", "2",
# "10.00"), so per-field heap allocations were the bulk of peak memory.
compact_str = { version = "0.9", features = ["serde"] }
# Source-XML (de)serialization for the typed source models.
quick-xml = "0.41"
# HTTP stack for the krab-server binary. Plain dependencies (no feature
# gate) so the crate's feature fingerprint never flips between CLI and server
# builds — a flip would re-run the codegen build script every time.
axum = "0.8"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
    "time",
    "macros",
] }
# Per-frame body timeouts: bounds how long a slow client can pin a worker
# and its memory reservation (tiny_http had no equivalent — see git history).
tower-http = { version = "0.6", features = ["timeout"] }
# `http_body::Body` impl (the reservation-holding response body) and
# `BodyExt::frame` for reading request bodies without an extra copy.
http-body = "1"
http-body-util = "0.1"
# TCP_NODELAY on the server listener: Nagle + delayed ACK adds ~40 ms to
# every keep-alive request without it. Keepalive bounds dead-peer pinning.
socket2 = "0.6"

# Internal crates.
einvoice-transformator = { path = "crates/einvoice-transformator" }
einvoice-dsl = { path = "crates/einvoice-dsl" }

# dev-dependencies
rstest = "0.26"
pretty_assertions = "1"
insta = "1"
criterion = "0.8"
# `ServiceExt::oneshot` drives the axum Router in-process — the whole HTTP
# decision table is tested without opening a socket.
tower = { version = "0.5", features = ["util"] }
