[package]
name = "einvoice-interfaces"
version.workspace = true
edition.workspace = true

[dependencies]
# Runtime the generated mappers link against.
einvoice-transformator = { workspace = true }
# Generated source structs + the MainKey hub use these directly.
rust_decimal = { workspace = true }
compact_str = { workspace = true }
serde = { workspace = true }
quick-xml = { workspace = true, features = ["serde", "serialize"] }
thiserror = { workspace = true }
# Used only by the krab-server binary; the linker strips it from krab-cli.
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
socket2 = { workspace = true }
# JSON for the server's capability endpoints (`GET /formats`).
serde_json = { workspace = true }

[build-dependencies]
# The compiler: build.rs runs the DSL pipeline and codegen at build time.
einvoice-dsl = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
pretty_assertions = { workspace = true }
criterion = { workspace = true }
tower = { workspace = true }
# `start_paused` tests fire body timeouts without real waiting.
tokio = { workspace = true, features = ["test-util"] }

[[bench]]
name = "transformation"
harness = false
